[package]
name = "safe-box"
version = "0.1.1"
edition = "2021"
authors = ["misaka10987 <misaka10987@outlook.com>"]
description = "Utilities for managing a password database."
documentation = "https://github.com/misaka10987/safe-box"
homepage = "https://github.com/misaka10987/safe-box"
repository = "https://github.com/misaka10987/safe-box"
readme = "README.md"
keywords = ["safe-box", "password", "safety"]
license = "MIT"

[dependencies]
crypto = { version = "0.5.1", features = ["password-hash"] }
argon2 = { version = "0.5.3" }
rand_core = { version = "0.6.4", features = ["getrandom"] }
sqlx = { version = "0.8.1", features = ["sqlite"] }
trace = "0.1.7"
thiserror = "1.0.63"
getrandom = "0.2.15"
base64 = "0.22.1"
smol = "2.0.2"
