[package]
name = "simple-safe"
version = "0.2.0"
edition = "2021"
authors = ["misaka10987 <misaka10987@outlook.com>"]
description = "Utilities for managing a password database."
documentation = "https://github.com/misaka10987/simple-safe"
homepage = "https://github.com/misaka10987/simple-safe"
repository = "https://github.com/misaka10987/simple-safe"
readme = "README.md"
keywords = ["safe", "password", "sqlite"]
license = "MIT"

[dependencies]
sqlx = { version = "0.8.1", features = ["sqlite"] }
thiserror = "2.0.12"
getrandom = "0.3.2"
base64 = "0.22.1"
async-mutex = "1.4.0"
rust-argon2 = "2.1.0"
